// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionAmount should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 hhvRsd"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render currency amount 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 hhvRsd"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 hhvRsd"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 2`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Total Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="Label-sc-4akkzw-0 hhvRsd"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
